Added logging functionality

--- a/research/Experiment.ipynb
+++ b/research/Experiment.ipynb
@@ -924,6 +924,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Step 7 Completed"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
