Data Validation added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -382,12 +382,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Now we need to convert all of this into modular coding as currently we have done everything in jupyter notebook.\n",
     "# We are going to just copy paste the info. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 19: Now we will start data validation. We already have the schema.yaml file where we have stored column name along with \n",
+    "# their data types. We will use this schema.yaml file to validate the csv file we stored in the artifacts folder during\n",
+    "# data ingestion. Why this is important? It is important as if we will not validate the data and will directly start training the \n",
+    "# model and if some columns is missing or the data type is not right then we might end up with an error. \n",
+    "#go to 02_data_vaidation.ipynb in the research folder. "
    ]
   }
  ],
