Data Transformation added

--- a/research/02_data_validation.ipynb
+++ b/research/02_data_validation.ipynb
@@ -175,16 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Step 22: Now we need to create data validation component\n",
     "import os \n",
     "from mlProject import logger \n",
+    "import pandas as pd\n",
     "\n",
     "class DataValidation:\n",
-    "    def __init__(config -> DataValidationConfig):\n",
+    "    def __init__(self,config: DataValidationConfig):\n",
     "        self.config = config \n",
     "    \n",
     "    def validate_all_columns(self) -> bool: \n",
@@ -200,16 +201,109 @@
     "                if col not in all_schema:\n",
     "                    validation_status = False\n",
     "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
-    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "                        f.write(f\"Validation status: {validation_status} \\n\")\n",
     "                else:\n",
     "                    validation_status = True\n",
     "                    with open(self.config.STATUS_FILE, 'w') as f:\n",
-    "                        f.write(f\"Validation status: {validation_status}\")\n",
+    "                        f.write(f\"Validation status: {validation_status} \\n\")\n",
     "            \n",
     "            return validation_status\n",
     "        except Exception as e:\n",
-    "            raise e "
+    "            raise e \n",
+    "    \n",
+    "    def validate_all_data_type(self) -> bool:\n",
+    "        try:\n",
+    "            validation_status = None\n",
+    "\n",
+    "            data = pd.read_csv(self.config.unzip_data_dir)\n",
+    "            all_cols = list(data.columns)\n",
+    "\n",
+    "            all_schema = self.config.all_schema\n",
+    "\n",
+    "            for col in all_cols:\n",
+    "                for sch in all_schema:\n",
+    "                    # if (col == sch):\n",
+    "                    #     print(f\"{all_schema[sch]}\")\n",
+    "                    # else:\n",
+    "                    #     pass\n",
+    "                    if ((col == sch ) and (data.dtypes[col] == all_schema[sch])):\n",
+    "                        validation_status = True\n",
+    "                        with open(self.config.STATUS_FILE, 'w') as f:\n",
+    "                            f.write(f'Validation status from dtypes function: {validation_status} \\n')\n",
+    "            \n",
+    "            return validation_status\n",
+    "        except Exception as e:\n",
+    "            raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 22: component preparation completed."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2024-05-22 22:52:10,557: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2024-05-22 22:52:10,568: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2024-05-22 22:52:10,583: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2024-05-22 22:52:10,585: INFO: common: Created Directory at: artifacts]\n",
+      "[2024-05-22 22:52:10,586: INFO: common: Created Directory at: artifacts/data_validation]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Step 23: Now we need to write the code for pipeline\n",
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    data_validation_config = config.get_data_validation_config()\n",
+    "    data_validation = DataValidation(data_validation_config)\n",
+    "    data_validation.validate_all_columns()\n",
+    "    data_validation.validate_all_data_type()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 23 Completed\n",
+    "#Now we just need to convert this notebook into modular components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 24: Data Transformation\n",
+    "# Here we are just going to perform train test split. \n",
+    "# Here we can also do PCA, EDA, Feature Engineering. \n",
+    "# Our dataset is already clean so we are not performing train test split. \n",
+    "# In research folder we will create a file called 03_data_transformation.ipynb\n",
+    "#Step 24: completed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
