--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -279,6 +279,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 30: Now we will go to model_trainer.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
