Prediction pipeline, html, css added + app.py created

--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -274,6 +274,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# step 42:  Creating prediction pipeline. for this we will directly create a file for prediction in pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
